@@ -1,3 +1,7 @@
+Tue Oct 12 19:10:38 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port-marshaled-queue.rb: BUG#265対応(その5)
+
 Tue Oct 12 17:58:13 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port.rb: BUG#265対応(その4)
